--- a/.github/workflows/translate.yml
+++ b/.github/workflows/translate.yml
@@ -34,6 +34,8 @@ jobs:
           if ! git diff --quiet; then
             git add app/resources/translations/*.ts
             git commit -m "Update translation files via lupdate"
+            git fetch origin ${{ github.head_ref }}
+            git rebase origin/${{ github.head_ref }}
             git push origin HEAD:${{ github.head_ref }}
           else
             echo "No translation updates needed"
