devcontainer: Use pre-built image with Dockerfile fallback
- Use wiredpanda-dev:latest image if available for faster startup
- Fall back to building from Dockerfile when image doesn't exist
- Improves development container startup time while maintaining flexibility

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,9 +1,14 @@
 {
     "$schema": "https://raw.githubusercontent.com/devcontainers/spec/main/schemas/devContainer.schema.json",
     "name": "wiRedPanda Development Environment",
-    "dockerFile": "Dockerfile",
-    "context": "..",
-    
+
+    // Use this image if it exists, otherwise build it
+    "image": "wiredpanda-dev:latest",
+    "build": {
+        "dockerfile": "Dockerfile",
+        "context": ".."
+    },
+
     // Configure tool-specific properties
     "customizations": {
         "vscode": {
