--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,17 @@ jobs:
       if: runner.os == 'Linux'
       run: sudo apt-get update && sudo apt-get install -y ninja-build
 
+    - uses: actions/setup-python@v5
+      with:
+        python-version: '3.12'
+        cache: 'pip'
+        cache-dependency-path: 'mcp/client/requirements.txt'
+
+    - name: Install Python Dependencies
+      run: |
+        pip install --upgrade pip
+        pip install -r mcp/client/requirements.txt
+
     - name: Install Qt
       uses: jurplel/install-qt-action@v4
       with:
@@ -78,3 +89,9 @@ jobs:
           build/CMakeFiles/CMakeOutput.log
           build/CMakeFiles/CMakeError.log
         retention-days: 7
+
+# =================================
+
+    - name: MCP Integration Test
+      run: |
+        python3 mcp/client/run_tests.py
