feat: implement comprehensive MCP server with native JSON Schema validation
This commit introduces a complete Model Context Protocol (MCP) integration for wiRedPanda,
enabling programmatic circuit design, simulation control, and educational automation.

- **MCPProcessor** (1,475 lines): Native Qt-based MCP command processor with 10ms polling
- **MCPValidator** (253 lines): Native JSON Schema validation using nlohmann/json
- **Application Integration**: Command-line '--mcp' mode with headless operation support
- **Protocol**: Simple JSON commands over stdin/stdout (not JSON-RPC 2.0)
- **Performance**: Sub-10ms response times with native C++ performance

- **Comprehensive Schema**: Complete validation for all 32+ MCP commands
- **Request/Response Validation**: Strict type checking for all API endpoints
- **Error Handling**: Detailed validation error reporting with context
- **Runtime Validation**: Schema copied to build directory for deployment

- **WiredPandaBridge**: High-level Python automation interface
- **Process Management**: Robust subprocess handling with proper cleanup
- **Circuit Construction**: Programmatic element creation and connection
- **Simulation Control**: Start/stop/restart with input/output value management
- **Export Functionality**: Image and waveform export capabilities

- **Dual Validation**: Both JSON Schema and Pydantic model validation
- **Type Safety**: Comprehensive type checking with beartype decorators
- **MCPModels**: Complete Pydantic models for all MCP data structures
- **Error Response Models**: Structured error handling and reporting

- **Complete Coverage**: Tests for all MCP commands and edge cases
- **Process Management**: Robust subprocess testing with timeout handling
- **Validation Testing**: Schema and model validation test coverage
- **Platform Support**: Cross-platform testing (Windows/Linux/macOS)
- **Performance Testing**: Response time and reliability validation

- **Circuit Examples**: Complete circuit automation demo

--- a/.gitignore
+++ b/.gitignore
@@ -173,3 +173,6 @@ Deploy/
 *.panda
 !examples/**/*.panda
 !test/backward_compatibility/**/*.panda
+!test/files/**/*.panda
+/mcp/client/temp
+__pycache__/
