--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.16)
-project(wiredpanda VERSION 4.3.0 LANGUAGES CXX)
+project(wiredpanda VERSION 4.4.0 LANGUAGES CXX)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -357,6 +357,7 @@ set(TEST_EXECUTABLES
     testlogicelements
     testsimulation
     testwaveform
+    testwireless
 )
 
 # Create individual test executables
