feat: Complete ground-up rewrite of Arduino code generation engine with comprehensive testing infrastructure
This commit represents a monumental transformation of wiRedPanda's Arduino export capability, evolving from a basic proof-of-concept into a sophisticated, production-ready code generation system capable of handling complex digital circuits with nested ICs, sequential logic, and advanced hardware elements.

## 🏗️ ARCHITECTURAL TRANSFORMATION

**Complete Code Generation Engine Rewrite**
- Transformed app/arduino/codegenerator.cpp from ~200 lines to 1,500+ lines of sophisticated code generation logic
- Implemented advanced topological sorting for complex dependency resolution across nested circuit hierarchies
- Added comprehensive variable scoping system with collision prevention and memory optimization
- Redesigned pin management with intelligent board selection (Arduino UNO → Nano → Mega 2560 → ESP32)
- Built robust error handling with graceful degradation and detailed diagnostic messaging

**Intelligent Hardware Abstraction**
- Pre-flight validation system that counts required pins and selects optimal Arduino board automatically
- Comprehensive pin allocation with bounds checking to prevent hardware exhaustion segfaults
- Multi-board support covering educational (UNO) through advanced (ESP32) use cases
- Real-time performance optimization with efficient loop() functions and minimal overhead

## 🔧 ADVANCED CIRCUIT ELEMENT SUPPORT

**Integrated Circuit (IC) Processing Pipeline**
- Complete IC handling with recursive processing of nested IC hierarchies up to 5+ levels deep
- Sophisticated variable mapping: external signals → internal IC variables → external outputs
- IC boundary tracking with clear code generation comments and context management (m_currentIC)
- Port variable management with unique naming schemes to prevent naming collisions across complex circuits
- Internal element processing with proper dependency ordering and signal flow validation

**Sequent

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -388,6 +388,7 @@ endif()
 
 # Define the test executables
 set(TEST_EXECUTABLES
+    testarduino
     testcommands
     testelements
     testfiles
