feat: Complete ground-up rewrite of Verilog HDL code generation engine with comprehensive FPGA support
This commit implements a comprehensive transformation of wiRedPanda's Verilog export capability,
evolving from a basic prototype to a sophisticated, production-ready HDL code generation system
matching the Arduino implementation's robustness and sophistication.

**Complete Verilog Code Generation Engine Rewrite**
- Transformed app/verilog/codegeneratorverilog.cpp from basic prototype to 1,600+ lines of sophisticated HDL generation
- Implemented advanced FPGA-aware architecture with multi-family support (Generic, Xilinx, Intel/Altera, Lattice)
- Added comprehensive resource estimation and intelligent board selection (Small FPGA → Artix-7 → Kintex-7 → Stratix V)
- Built robust error handling with graceful degradation and detailed diagnostic messaging
- Redesigned variable management with collision prevention and memory optimization

**Intelligent FPGA Hardware Abstraction**
- Pre-flight validation system counting required LUTs, flip-flops, and I/O pins for optimal FPGA selection
- Multi-board support covering educational (Generic-Small) through advanced (Stratix V) use cases
- Real-time resource estimation with safety margins and comprehensive pin allocation
- FPGA-specific attribute generation (Xilinx CLOCK_BUFFER_TYPE, Intel altera_attribute, Lattice syn_isclock)

**Integrated Circuit (IC) Processing Pipeline**
- Complete IC handling with recursive processing of nested IC hierarchies up to 10+ levels deep
- Sophisticated variable mapping: external signals → internal IC variables → external outputs
- IC boundary tracking with clear HDL generation comments and context management (m_currentIC)
- Port variable management with unique naming schemes preventing collisions across complex circuits
- Internal element processing with proper dependency ordering and signal flow validation

**Sequential Logic Implementation**
- Full flip-flop support: D, T, JK, and SR flip-flops

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -280,6 +280,7 @@ target_include_directories(wiredpanda_lib PUBLIC
     app/element
     app/logicelement
     app/nodes
+    app/verilog
     mcp/server/core
     mcp/server/handlers
     mcp/server/interfaces
@@ -395,6 +396,7 @@ set(TEST_EXECUTABLES
     testicons
     testlogicelements
     testsimulation
+    testverilog
     testwaveform
 )
 
